       Canon PIXMA iP4900 (EXPERIMENTAL)
       Canon PIXMA iP6210D(EXPERIMENTAL)
       Canon PIXMA iP6220D(EXPERIMENTAL)
       Canon PIXMA iP6310D(EXPERIMENTAL)
       Canon PIXMA iP7100 (EXPERIMENTAL)
       Canon PIXMA iP7500 (EXPERIMENTAL)
       Canon PIXMA iP8100 (EXPERIMENTAL)
       Canon PIXMA iP8600 (EXPERIMENTAL)
       Canon PIXMA iP9910 (EXPERIMENTAL)
       Canon PIXMA MP375R
       Canon PIXMA MP190  (EXPERIMENTAL)
       Canon PIXMA MP470  (EXPERIMENTAL)
       Canon PIXMA MP490  (EXPERIMENTAL)
       Canon PIXMA MP530  (EXPERIMENTAL)
       Canon PIXMA MP900  (EXPERIMENTAL)
       Canon PIXMA MG2100 (EXPERIMENTAL)
       Canon PIXMA MG3100 (EXPERIMENTAL)
       Canon PIXMA MG4100 (EXPERIMENTAL)
       Canon PIXMA MG5300 (EXPERIMENTAL)
       Canon PIXMA MG6200 (EXPERIMENTAL)
       Canon PIXMA MG8200 (EXPERIMENTAL)

     - Epson inkjet printers:

       EPSON Stylus CX3900
       EPSON Stylus Photo RX650

  2) A crash with the EPSON Stylus Photo R3000 has been fixed.

  3) Galician and Ukrainian translations have been added.

  4) (API) Added function stp_vars_copy_from() to override settings in
     one settings object with those in another.

  5) The following printer models were completely redefined or had
     major changes carried out in the supported modes:

       Canon PIXMA iP5000 (EXPERIMENTAL)
       Canon PIXMA iP4100 (EXPERIMENTAL)
       Canon PIXMA i80    (EXPERIMENTAL)
       Canon PIXMA i560   (EXPERIMENTAL)
       Canon PIXMA i850   (EXPERIMENTAL) *1
       Canon PIXMA i860   (EXPERIMENTAL) *1
       Canon   BJC S300   (EXPERIMENTAL)
       Canon   BJC S500   (EXPERIMENTAL)
       Canon   BJC S600   (EXPERIMENTAL)
       Canon   BJC S800   (EXPERIMENTAL)

       *1: for compatibility, the changed printers are named with
        "new" appended. The old printers will be deprecated in a
        future release.

* Changes from 5.2.6

  1) New printers supported in this release:
