@@ -302,8 +302,9 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA iP8100 (EXPERIMENTAL)
        Canon PIXMA iP8600 (EXPERIMENTAL)
        Canon PIXMA iP9910 (EXPERIMENTAL)
-       Canon PIXMA MP375R
+       Canon PIXMA MP140  (EXPERIMENTAL)
        Canon PIXMA MP190  (EXPERIMENTAL)
+       Canon PIXMA MP375R
        Canon PIXMA MP470  (EXPERIMENTAL)
        Canon PIXMA MP490  (EXPERIMENTAL)
        Canon PIXMA MP530  (EXPERIMENTAL)
